objects/Sellable_Item_Product__c.object
<CustomObject>
    <fields>
        <fullName>LT_DCOGS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LT DCOGS Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (LT DCOGS Account)</relationshipLabel>
        <relationshipName>Sellable_Items_ProductO5fd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Order__c</fullName>
        <inlineHelpText>The ultimate date on which any additional product units and add-ons of an EOL product can be ordered. From and after the LOD, no new quotes for either licenses or maintenance contracts containing the EOL product will be issued or accepted.</inlineHelpText>
        <label>Last Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Compliance__c</fullName>
        <inlineHelpText>Drop-down choice: (no default, must select one)
- Contractual/Legal enforcement
- Technical license controls: uses Flex license keys for control (legal products only)</inlineHelpText>
        <label>License Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractual / Legal Enforcement</fullName>
                </value>
                <value>
                    <fullName>Technical License Controls</fullName>
                </value>
                <value>
                    <fullName>Not Applicable (Not a License)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for determining whether Licensing has completed review of the licensing data.</description>
        <inlineHelpText>Check when Licensing review of the Sellable Item is complete.</inlineHelpText>
        <label>License Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Term__c</fullName>
        <label>License Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Change__c</fullName>
        <inlineHelpText>Indicates whether there has been a change from previous versions. For brand new items, select Introduction/Change of License under Licensing Change.</inlineHelpText>
        <label>Product Licensing Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                </value>
                <value>
                    <fullName>Introduction / Change of License</fullName>
                </value>
                <value>
                    <fullName>Removal of License</fullName>
                </value>
                <value>
                    <fullName>Not Applicable (Not a License)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensing_Note__c</fullName>
        <inlineHelpText>Additional notes to supplement or clarify the information provided in the Licensing or Licensing Change fields.</inlineHelpText>
        <label>Licensing Note</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Licensing__c</fullName>
        <inlineHelpText>Please see the Field Glossary link at the top of the page for details about the values in this field.</inlineHelpText>
        <label>Product Licensing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable (Not a License)</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Branch or Store</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Concurrent Seat</fullName>
                </value>
                <value>
                    <fullName>Concurrent User</fullName>
                </value>
                <value>
                    <fullName>CPU</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Enabled Seat</fullName>
                </value>
                <value>
                    <fullName>Enabled User</fullName>
                </value>
                <value>
                    <fullName>Enterprise User</fullName>
                </value>
                <value>
                    <fullName>Entry</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Interaction</fullName>
                </value>
                <value>
                    <fullName>Lab Instance</fullName>
                </value>
                <value>
                    <fullName>Mailbox</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Port</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Remote User</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Seat</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maturity__c</fullName>
        <inlineHelpText>Maturity indicates the stage of adoption of the product.  General is fully release for any customer, conditional and early adopter should reflect the roadmap status for this item.</inlineHelpText>
        <label>Maturity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Early Adopter</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Information__c</fullName>
        <inlineHelpText>Freeform field – [unlimited] characters.   For product migration information for the Pricing Guide wiki (or future version).  Describes migration information and path for a Sales audience – should cover migration from any predecessors to any successors.</inlineHelpText>
        <label>Migration Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multi_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi Site?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Category__c</fullName>
        <formula>TEXT(Base_Item__r.New_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set at the Base Item Level and is read only in Sellable Item level. Needs to be populated in order for Quoting Tool to identify where to place the sellable item in Product Configurator &amp; also displayed on Quote output file. Drives price list organization.</inlineHelpText>
        <label>New Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Family</label>
        <referenceTo>Sellable_Item_Family__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (New Family)</relationshipLabel>
        <relationshipName>Sellable_Items_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>This is an optional field for any general comments on this Sellable Item</inlineHelpText>
        <label>Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nothing_shipped_license_only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if there are no CDs in the Bill of Material (BOM). If there are CDs in the BOM, then this box must be left un-checked.</inlineHelpText>
        <label>No Software Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_BOM_Updates__c</fullName>
        <label>Number of BOM Updates</label>
        <summaryForeignKey>Sellable_Shippable_Items__c.Sellable_Item_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Predecessors__c</fullName>
        <label>Number of Predecessors</label>
        <summaryForeignKey>Product_Relationship__c.Predecessors__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Prerequisites__c</fullName>
        <label>Number of Prerequisites</label>
        <summaryForeignKey>Sellable_Item_Prerequisite__c.Sellable_Item_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <description>What it Does? Field created to controlling field for prick book. 
Downstream Impact? impact in sellable item product vfpage 
Which department is owner? All</description>
        <label>Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pureengage</fullName>
                    <default>true</default>
                    <label>Pureengage</label>
                </value>
                <value>
                    <fullName>PPU</fullName>
                </value>
                <value>
                    <fullName>Pureconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage On Premise</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect On Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Subscription</fullName>
                </value>
                <value>
                    <fullName>PureConnect Subscription</fullName>
                </value>
                <value>
                    <fullName>PureConnect Small Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMM_Owner__c</fullName>
        <formula>Base_Item__r.PMM_Owner__r.FirstName &amp; &apos; &apos; &amp; Base_Item__r.PMM_Owner__r.LastName</formula>
        <inlineHelpText>This is the Product Marketing Manager who owns the base item and all sellable items under that base item. PM enters at the Base Item level</inlineHelpText>
        <label>PMM Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Owner__c</fullName>
        <formula>Base_Item__r.PM_Owner__r.FirstName &amp; &apos; &apos; &amp; Base_Item__r.PM_Owner__r.LastName</formula>
        <inlineHelpText>his is the Product Manager who owns the base item and all sellable items under that base item. PM enters at the Base Item level</inlineHelpText>
        <label>PM Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for determining whether the PM has completed review of the predecessor/successor and prerequisite links, and other necessary data.</description>
        <inlineHelpText>Check when PM review of the Sellable Item is complete.</inlineHelpText>
        <label>PM Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POB_Type__c</fullName>
        <label>POB Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Base Package</fullName>
                </value>
                <value>
                    <fullName>Cloud-Committed</fullName>
                </value>
                <value>
                    <fullName>Cloud-Ramp-Uncommitted</fullName>
                    <isActive>false</isActive>
                    <label>Cloud-Ramp-Uncommitted</label>
                </value>
                <value>
                    <fullName>Cloud-Uncommitted</fullName>
                    <isActive>false</isActive>
                    <label>Cloud-Uncommitted</label>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Hardware Support</fullName>
                    <isActive>false</isActive>
                    <label>Hardware Support</label>
                </value>
                <value>
                    <fullName>Hardware Support Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Hardware Support Renewal</label>
                </value>
                <value>
                    <fullName>Latitude Cloud</fullName>
                </value>
                <value>
                    <fullName>Latitude License - Cloud</fullName>
                    <isActive>false</isActive>
                    <label>Latitude License - Cloud</label>
                </value>
                <value>
                    <fullName>Latitude License - Perpetual</fullName>
                    <isActive>false</isActive>
                    <label>Latitude License - Perpetual</label>
                </value>
                <value>
                    <fullName>Latitude Perpetual - On Premise</fullName>
                </value>
                <value>
                    <fullName>Latitude Premise Subscription - Committed</fullName>
                </value>
                <value>
                    <fullName>Maintenance - FYM</fullName>
                    <isActive>false</isActive>
                    <label>Maintenance - FYM</label>
                </value>
                <value>
                    <fullName>Maintenance Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Maintenance Renewal</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Over Time - PS Fee</fullName>
                </value>
                <value>
                    <fullName>Over Time - TAM</fullName>
                </value>
                <value>
                    <fullName>Perpetual License</fullName>
                    <isActive>false</isActive>
                    <label>Perpetual License</label>
                </value>
                <value>
                    <fullName>Point In Time - Cloud</fullName>
                    <isActive>false</isActive>
                    <label>Point In Time - Cloud</label>
                </value>
                <value>
                    <fullName>PPU Committed</fullName>
                </value>
                <value>
                    <fullName>PPU Overage</fullName>
                </value>
                <value>
                    <fullName>Premise Subscription - Committed</fullName>
                    <isActive>false</isActive>
                    <label>Premise Subscription - Committed</label>
                </value>
                <value>
                    <fullName>Premise Uncommitted - Usage</fullName>
                    <isActive>false</isActive>
                    <label>Premise Uncommitted - Usage</label>
                </value>
                <value>
                    <fullName>PS - CAS</fullName>
                </value>
                <value>
                    <fullName>PS - CAS - Renewal</fullName>
                </value>
                <value>
                    <fullName>PS - Expense</fullName>
                </value>
                <value>
                    <fullName>PS - Expert App</fullName>
                </value>
                <value>
                    <fullName>PS - Fixed Fee on Date</fullName>
                </value>
                <value>
                    <fullName>PS - Fixed Price Percent Complete</fullName>
                </value>
                <value>
                    <fullName>PS - Fixed Subcontractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPUProductSpecificDiscount__c</fullName>
        <label>PPU Product Specific Discount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPUProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPU Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Contents__c</fullName>
        <inlineHelpText>New Sellable Item = for brand new items that did not exist in a previous release
Simple Version Increment = for up-revs in which CDs have been transferred from one release to the next
Packaging Change = use if CDs or other BOM line items have changed</inlineHelpText>
        <label>Package Contents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple Version Increment</fullName>
                </value>
                <value>
                    <fullName>Packaging Change</fullName>
                </value>
                <value>
                    <fullName>New Sellable Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <formula>Base_Item__r.Parent_Product__r.Name</formula>
        <inlineHelpText>This field is set at a Base Item level in MML, and only read only in Sellable Item level.</inlineHelpText>
        <label>Parent Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Category__c</fullName>
        <description>What it Does? Identifies the category for Partner margin discount
Downstream Impact? Impacts quoting tool. ETL syncs the value.
Which department is owner? Product/Offer Management</description>
        <label>Partner Margin Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Third Party Hardware</fullName>
                </value>
                <value>
                    <fullName>Third Party Hardware - AudioCodes</fullName>
                </value>
                <value>
                    <fullName>Third Party Software</fullName>
                </value>
                <value>
                    <fullName>Technical Support Services</fullName>
                </value>
                <value>
                    <fullName>System Bundle</fullName>
                </value>
                <value>
                    <fullName>No Margin</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Margin_Type__c</fullName>
        <description>What it Does? Used to store margin type for PC products 
Downstream Impact? Impacts partner price calculation under quotes 
Which department is owner? Product/Offer Management</description>
        <label>Partner Margin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PC Hardware 15% Disc</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureCloud Hardware</fullName>
                </value>
                <value>
                    <fullName>PureCloud Voice</fullName>
                </value>
                <value>
                    <fullName>No Margin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payables_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payables Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (Payables Account)</relationshipLabel>
        <relationshipName>Sellable_Items_Product4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PhysicalTaxCode__c</fullName>
        <inlineHelpText>LICENSE	DC010400
MAINTENANCE	SC100502
PS CONSULTING	SC070103
EDUCATION	SC080303
PPU	DC010400
Freight	FR020000
HARDWARE	PC080000
NONTAXABLE	ON030000</inlineHelpText>
        <label>Physical Tax Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Electronictaxcode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DC010400</fullName>
                </value>
                <value>
                    <fullName>SC100502</fullName>
                </value>
                <value>
                    <fullName>SC070103</fullName>
                </value>
                <value>
                    <fullName>SC080303</fullName>
                </value>
                <value>
                    <fullName>FR020000</fullName>
                </value>
                <value>
                    <fullName>PC080000</fullName>
                </value>
                <value>
                    <fullName>ON030000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Predecessor_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Previous version of this sellable item. I.e. the sellable item(s) from which customers can migrate to this item.</inlineHelpText>
        <label>Predecessor Of</label>
        <referenceTo>Sellable_Item_Product__c</referenceTo>
        <relationshipLabel>Predecessors</relationshipLabel>
        <relationshipName>Predecessors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Count__c</fullName>
        <label>Prerequisite_Count</label>
        <summaryForeignKey>Sellable_Item_Product_Prerequisite__c.Sellable_Item_Product_Master__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Previous_Availability__c</fullName>
        <label>Previous Availability</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_Comments__c</fullName>
        <inlineHelpText>Buying Rules (formerly Price Book Comments). Pricing Team enter data with guidance from Product Managers. Enter text for data to be captured and utilized in the pricing tools. These comments carry forward to the Quote Tool and Price List, albeit manually.</inlineHelpText>
        <label>Buying Rules</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Book_Type__c</fullName>
        <inlineHelpText>Describes whether sellable item is to be on the Old Pricing or New Pricing.</inlineHelpText>
        <label>Price Book Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Offer_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Pricing</fullName>
                </value>
                <value>
                    <fullName>Old Pricing</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Effective_Date__c</fullName>
        <inlineHelpText>Entered by Pricing Manager</inlineHelpText>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Permission__c</fullName>
        <inlineHelpText>Provides whether sellable item is to be on public view or only available in product search. Only changed by Pricing Manager; however, advise Pricing Manager of necessary changes.</inlineHelpText>
        <label>Price Permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>What it Does? Identifies the type of pricing.
Downstream Impact? Impacts quoting tool. ETL syncs the value.
Which department is owner? Product/Offer Management</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Rate Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Committee__c</fullName>
        <inlineHelpText>Entered by Pricing Manager</inlineHelpText>
        <label>Pricing Committee Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <inlineHelpText>Pricing Manager selects pricing model from dropdown list options.

Please see the Field Glossary link at the top of the page for more details.</inlineHelpText>
        <label>Pricing Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Concurrent</fullName>
                </value>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>ELA</fullName>
                </value>
                <value>
                    <fullName>Branch Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Server</fullName>
                </value>
                <value>
                    <fullName>AudioCodes</fullName>
                </value>
                <value>
                    <fullName>Collector</fullName>
                </value>
                <value>
                    <fullName>Hardware Warranty</fullName>
                </value>
                <value>
                    <fullName>HP Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Media Server</fullName>
                </value>
                <value>
                    <fullName>Interaction SIP Gateway</fullName>
                </value>
                <value>
                    <fullName>Monthly MPLS</fullName>
                </value>
                <value>
                    <fullName>Monthly Telco</fullName>
                </value>
                <value>
                    <fullName>Monthly Telco/MPLS/Data Center Fees</fullName>
                </value>
                <value>
                    <fullName>Not A Product</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Services</fullName>
                </value>
                <value>
                    <fullName>Polycom</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Server Licenses</fullName>
                </value>
                <value>
                    <fullName>Software Licensing</fullName>
                </value>
                <value>
                    <fullName>System Packages</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Upfront Education and Training Services</fullName>
                </value>
                <value>
                    <fullName>Upfront Hardware Costs</fullName>
                </value>
                <value>
                    <fullName>Upfront Provisioning Fees</fullName>
                </value>
                <value>
                    <fullName>One-Time Fees</fullName>
                </value>
                <value>
                    <fullName>Subscription Fees</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Estimated PureCloud Virtual Edge</fullName>
                </value>
                <value>
                    <fullName>PureCloud Voice</fullName>
                </value>
                <value>
                    <fullName>Resource Services</fullName>
                </value>
                <value>
                    <fullName>Bundles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Availability_Announcement__c</fullName>
        <defaultValue>&quot;https://intranet.genesys.com/display/PMPO/Summary+of+Announcements&quot;</defaultValue>
        <inlineHelpText>Informational link to all Product Availability &amp; EOL Announcements.</inlineHelpText>
        <label>Product Availability &amp; EOL Announcements</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Availability_EOL_Announcements__c</fullName>
        <description>Informational link to all Product Availability &amp; EOL Announcements.</description>
        <formula>HYPERLINK(&quot;https://intranet.genesys.com/display/PMPO/Summary+of+Announcements&quot;,&quot;Product Availability &amp; EOL Announcements (requires VPN)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Informational link to all Product Availability &amp; EOL Announcements.</inlineHelpText>
        <label>Product Availability &amp; EOL Announcements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Capabilities__c</fullName>
        <inlineHelpText>Freeform field – [unlimited] characters, entered at the Base Item.   For product feature information for the Product Guide wiki (or future version).   Describes product features and benefits for a Sales audience.</inlineHelpText>
        <label>Product Capabilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>